feat(): teste para deploy atualiza secutiryConfig